--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="body">
 <div id="mainContainer"></div>
-  <script src="/lib/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript"  src="<%= root%>lib/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="<%= commons %>"></script>
   <script type="text/javascript" src="<%= index%>"></script>
 </body>
