--- a/upload/index.html
+++ b/upload/index.html
@@ -8,8 +8,8 @@
 </head>
 <body id="body">
 <div id="mainContainer"></div>
-  <script src="/lib/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="/build/commons.d1bc60728c096288a226.bundle.js"></script>
-  <script type="text/javascript" src="/build/index.d1bc60728c096288a226.bundle.js"></script>
+  <script type="text/javascript"  src="/lib/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="/build/commons.7b98e6a8982193b70bcb.bundle.js"></script>
+  <script type="text/javascript" src="/build/index.7b98e6a8982193b70bcb.bundle.js"></script>
 </body>
 </html>
