--- a/upload/index.html
+++ b/upload/index.html
@@ -2,14 +2,14 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="/build/css/index.bbadd03f3948c730bb2487e42a6b7f93.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="/build/css/index.f64744c3a49f4a638e07a829eff4157c.css">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
 </head>
 <body id="body">
 <div id="mainContainer"></div>
   <script type="text/javascript"  src="/lib/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="/build/commons.071071a89394025a40d1.bundle.js"></script>
-  <script type="text/javascript" src="/build/index.071071a89394025a40d1.bundle.js"></script>
+  <script type="text/javascript" src="/build/commons.0ef32ff800ed9922cbf4.bundle.js"></script>
+  <script type="text/javascript" src="/build/index.0ef32ff800ed9922cbf4.bundle.js"></script>
 </body>
 </html>
