--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="http://192.168.2.202:8004/semantic-ui.styles.css">
+  <link rel="stylesheet" type="text/css" href="/build/css/index.f64744c3a49f4a638e07a829eff4157c.css">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+  <!-- <script src="https://www.paypalobjects.com/api/checkout.js"></script> -->
+  <title>船舶资产交易数字化平台</title>
+  <link rel="icon" href="/images/logo.png" type="image/x-icon" />
 </head>
 <body id="body">
 <div id="mainContainer"></div>
   <script type="text/javascript"  src="/lib/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="http://192.168.2.202:8004/commons.bundle.js"></script>
-  <script type="text/javascript" src="http://192.168.2.202:8004/index.bundle.js"></script>
+  <script type="text/javascript" src="/build/commons.a348fcdb63c83d030954.bundle.js"></script>
+  <script type="text/javascript" src="/build/index.a348fcdb63c83d030954.bundle.js"></script>
 </body>
 </html>
