--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" type="text/css" href="<%= css%>">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+  <!-- <script src="https://www.paypalobjects.com/api/checkout.js"></script> -->
+  <title>船舶资产交易数字化平台</title>
+  <link rel="icon" href="/images/logo.png" type="image/x-icon" />
 </head>
 <body id="body">
 <div id="mainContainer"></div>
